# ADAM

./: AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt
.github/workflows/: build-docs.yml  publish-to-pypi.yml  semantic-release.yml  unit-tests.yml
docs/: environment-docs.yml  index.rst  make.bat  usage.rst
docs/source/: conf.py  history.rst  index.rst
docs/source/contributors_guide/: index.rst
docs/source/dev_reference/: index.rst
docs/source/user_guide/: index.rst  overview.rst  read_radar_data.rst  show_me_the_lakebreeze.rst
examples/: README.txt  run_lake_breeze_plot.py
notebooks/: lake_breeze_detection_example.ipynb
scripts/: README.md  submit_job.py
src/adam/: __init__.py
src/adam/io/: __init__.py  get_radar_scan.py
src/adam/model/: __init__.py  predict_lake_breeze.py
src/adam/testing/: __init__.py  fake_lidar.py
src/adam/testing/data/: test_scan_ppi.txt  test_scan_ppi_lakebreeze_close.txt  test_scan_rhi.txt  test_scan_rhi_lakebreeze.txt
src/adam/triggering/: __init__.py  halo_lidar.py
src/adam/util/: __init__.py  instrument_steering.py
src/adam/vis/: __init__.py  visualize_lake_breeze.py
tests/: __init__.py  test_adam.py  test_adaptive_scanning.py  test_inference.py  test_io.py  test_util.py  test_vis.py
